# open-codex-interpreter

./: .dockerignore  .gitignore  ANALISE_AGENTICSEEK_OPENMANUS.md  ANALISE_AI_MANUS.md  ANALISE_BROWSER_USE.md  ANALISE_NEW_FOLDER.md  ANALISE_OPENAI_CODEX.md  ANALISE_ORCHESTRATOR.md  ANALISE_TECNICA_IMPARCIAL.md  ANALISE_THINKING_MODELOS.md  ANIMA_COMPLETE_OVERVIEW.md  ARQUITETURA_FINAL.md  ARQUITETURA_HIBRIDA_QWEN32B.md  AUTOGEN_V2_COMANDA_TUDO.md  AgentTeamVisualization.tsx  BACKEND_PYTHON_SIMPLES.md  CHANGELOG.md  CLASSIFICADOR_INTENCAO_MISTRAL.md  COMECE_AQUI.md  COMO_INICIAR.md  COMO_PROGRAMAR.md  CONFIGURACAO_OLLAMA_CLOUD_COMPLETA.md  CORRECAO_OPEN_INTERPRETER.md  CORRECOES_JSON_E_OPEN_INTERPRETER.md  ChatInterface.tsx  DECISAO_TECNICA_FINAL.md  DIAGRAMA_VISUAL.md  Dockerfile  EXEMPLO_PRATICO.md  FUNCIONALIDADES_STATUS.md  GUIA_BACKEND_PYTHON.md  GUIA_DEEPSEEK_CODER_V2_OLLAMA.md  GUIA_OLLAMA_CLOUD.md  GUIA_PYTHON_PURO.md  INICIAR.bat  INICIAR_AGORA.bat  INICIAR_AGORA.md  INICIAR_SERVIDORES.bat  INICIO_RAPIDO.md  INSTALAR_DEEPSEEK_CODER_V2_RTX.md  (+90 more)
New folder/: orchestrator.py
anima/: README.md  __init__.py
autogen_agent_interface/: .gitignore  .npmrc  .parcelignore  .parcelrc  .postcssrc.json  ALTERNATIVAS_VITE_LAN.md  ANALISE_E_TAREFAS.md  ARQUITETURA_FRONTEND_BACKEND.md  COMO_ACESSAR_APLICACAO.md  CORRECOES_FINAIS.md  CORRECOES_FINAIS_PARCEL.md  CORREÇÕES_TAILSCALE.md  CORRIGIR_CAMINHO_PARCEL.md  CORRIGIR_ERRO_PARCEL.md  CORRIGIR_ERRO_PARCEL_CACHE.md  CORRIGIR_PARCEL_FAVICON.md  CORRIGIR_PARCEL_REACT.md  CORRIGIR_REACT_JSX_RUNTIME.md  DEPENDENCIAS_INSTALADAS.md  ESTRUTURA_SIMPLIFICADA.md  INICIAR_SERVIDOR.bat  INICIAR_SERVIDOR.md  INICIAR_SERVIDOR_COM_BUILD.bat  INSTALAR_DEPENDENCIAS.md  INSTALAR_STT.bat  INSTRUCOES_FINAIS.md  (+36 more)
(+380 files in other folders)
