[tool.poetry]
name = "open-interpreter"
packages = [
    { include = "interpreter" },
    { include = "dev_framework" },
    { include = "unified_agent" },
    { include = "webui" },
    { include = "litellm" },
]
include = [
    "dev_framework/memory/context.json",
    "webui/static/**/*",
    "webui/templates/**/*",
]
version = "0.0.297"
description = "Ask GPT-4 to run code locally."
authors = ["Killian Lucas <killian@drinkwater.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
rich = "^13.4.2"
tiktoken = "^0.4.0"
astor = "^0.8.1"
git-python = "^1.0.3"
tokentrim = "^0.1.2"
appdirs = "^1.4.4"
six = "^1.16.0"
ollama = "^0.2.0"
chromadb = "^0.4.24"
pyautogui = "^0.9.54"
pynput = "^1.7.6"
pillow = "^10.3.0"
pytesseract = "^0.3.10"
SpeechRecognition = "^3.10.0"

# On non-windows systems, you can just `import readline`.
# On windows, `pyreadline3` replaces that, so you can also just `import readline`.
inquirer = "^3.1.3"
wget = "^3.2"
sounddevice = "^0.4.6"
numpy = "^1.26.4"
browser-use = "^0.1.18"
fastapi = "^0.111.0"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
jinja2 = "^3.1.3"
[tool.poetry.dependencies.pyautogen]
version = "^0.2.35"
optional = true

[tool.poetry.dependencies.pyreadline3]
version = "^3.4.1"
markers = "sys_platform == 'win32'"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.extras]
autogen = ["pyautogen"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
interpreter = "interpreter:cli"
unified-agent = "dev_framework.__main__:main"
unified-agent-web = "webui.app:run"
